# MirageWallpaper

./: .gitignore  README.md
Mirage/: Mirage-Wallpaper-Info.plist
Mirage/Mirage Wallpaper/: AppDelegate.swift
Mirage/Mirage Wallpaper.xcodeproj/project.xcworkspace/xcuserdata/laobamac.xcuserdatad/: UserInterfaceState.xcuserstate
Mirage/Mirage Wallpaper/ContentView/: ContentView.swift
Mirage/Mirage Wallpaper/ContentView/Components/: TopTabBar.swift  WallpaperPreview.swift
Mirage/Mirage Wallpaper/ContentView/Components/Workshop/: WorkshopView.swift
Mirage/Mirage Wallpaper/MenuBars/: StatusBar.swift
Mirage/Mirage Wallpaper/Services/: GlobalSettingsService.swift  RendererController.swift  SteamCMDManager.swift  SystemAudioSpectrumService.swift  WallpaperViewModel.swift  WorkshopModels.swift  WorkshopViewModel.swift
Mirage/Mirage Wallpaper/SettingsView/: GeneralPage.swift
Mirage/Mirage Wallpaper/SteamSetup/: SteamSetupView.swift  SteamSetupViewModel.swift
Mirage/Mirage Wallpaper/SteamSetup/Steps/: SteamCMDStep.swift  SteamLoginStep.swift
MirageQt/: CMakeLists.txt  README.md
MirageQt/Sources/ContentView/: MainWindow.cpp  MainWindow.h
MirageQt/Sources/ContentView/Components/: ExplorerBottomBarWidget.cpp  ExplorerBottomBarWidget.h  WallpaperListWidget.cpp  WallpaperListWidget.h
MirageQt/Sources/ContentView/Components/Playlist/: PlaylistOpenDialog.cpp  PlaylistOpenDialog.h  PlaylistSaveDialog.cpp  PlaylistSaveDialog.h  PlaylistSettingsDialog.cpp  PlaylistSettingsDialog.h
MirageQt/Sources/Services/: GlobalSettingsService.cpp  GlobalSettingsService.h  PlaylistManager.cpp  PlaylistManager.h  PlaylistModels.cpp  PlaylistModels.h  PlaylistRotator.cpp  PlaylistRotator.h  PlaylistTransitionOverlay.cpp  PlaylistTransitionOverlay.h  RendererController.cpp  RendererController.h
MirageQt/Sources/SettingsView/: PerformancePage.cpp  PerformancePage.h
SceneRenderer/: .gitignore
SceneRenderer/Sources/SceneRenderer/AppRuntime/Controller/: SceneUniformBinder.cpp  WallpaperEngineRuntime.cpp  WallpaperEngineRuntime.cppm
SceneRenderer/Sources/SceneRenderer/AppRuntime/Scripting/: ScriptRuntime.cpp  ScriptRuntime.cppm
SceneRenderer/Sources/SceneRenderer/AppRuntime/Text/: TextRasterizer.cpp  TextRasterizer.cppm
SceneRenderer/Sources/SceneRenderer/AppRuntime/Timing/: FrameClock.cpp  WorkerTimer.cpp  WorkerTimer.cppm
SceneRenderer/Sources/SceneRenderer/Assembly/: CMakeLists.txt
SceneRenderer/Sources/SceneRenderer/Domain/Particles/: ParticleEmitter.cpp  ParticleSystem.cpp  WallpaperParticleGeometry.cpp
SceneRenderer/Sources/SceneRenderer/Domain/Scene/: IndexBuffer.cpp  LayerEffectStack.cpp  VertexBuffer.cpp  World.cpp  World.cppm
SceneRenderer/Sources/SceneRenderer/Frame/Graph/: FrameGraph.cpp  FrameGraph.cppm
SceneRenderer/Sources/SceneRenderer/Gpu/Pipeline/: BlitPass.cpp  BlitPass.cppm  BufferResolver.cpp  BufferResolver.cppm  MaterialPass.cpp  PreparePass.cpp  PreparePass.cppm  PresentPass.cpp  PresentPass.cppm  RenderPassBase.cppm  RenderResources.cppm  ResourceKey.cppm  ShaderReflectionCache.cpp  ShaderReflectionCache.cppm  VulkanFrameEngine.cpp  VulkanFrameEngine.cppm
SceneRenderer/Sources/SceneRenderer/Gpu/Vulkan/: Device.cpp  Instance.cpp  TextureCache.cpp  VulkanApi.cppm  VulkanDispatch.cpp  VulkanHandles.cppm
SceneRenderer/Sources/SceneRenderer/Kernel/: Fs.cppm
SceneRenderer/Sources/SceneRenderer/Wallpaper/Compiler/: CompilePipeline.cppm  MaterialShaderCompiler.cpp  MaterialShaderCompiler.cppm  ParticleCompiler.cpp  SceneCompiler.cpp  ShaderAnnotations.cpp
SceneRenderer/Sources/SceneRenderer/Wallpaper/Container/: PackageStore.cpp
SceneRenderer/Sources/SceneRenderer/Wallpaper/Schema/: ImageLayerSpec.cpp  ImageLayerSpec.cppm  MiscLayerSpec.cppm
SceneRenderer/Tools/SceneWallpaper/: WallpaperApp.cpp
VideoRenderer/: CMakeLists.txt
VideoRenderer/Sources/Common/VideoRenderer/: VideoRendererTypes.cpp  VideoRendererTypes.h
VideoRenderer/Sources/Linux/VideoRenderer/: ControlChannel.h  VideoManifest.h  VideoRendererEngine.cpp  VideoRendererEngine.h  X11DesktopWindow.cpp  X11DesktopWindow.h
VideoRenderer/Sources/VideoRenderer/: CMakeLists.txt  VRMemoryAssetLoader.h  VRMemoryAssetLoader.mm  VideoRendererEngine.mm
VideoRenderer/Sources/VideoRenderer/Linux/: VideoManifest.cpp  VideoRendererEngine.cpp  VideoRendererEngine.h
VideoRenderer/Sources/VideoRenderer/macOS/: VideoManifest.mm  VideoRendererEngine.h  VideoRendererEngine.mm
VideoRenderer/Sources/macOS/VideoRenderer/: VideoManifest.h  VideoManifest.mm  VideoRendererEngine.h  VideoRendererEngine.mm
VideoRenderer/Tests/: CMakeLists.txt  VideoManifestTests.cpp  VideoRendererTypesTests.cpp
VideoRenderer/Tools/VideoViewer/: CMakeLists.txt
VideoRenderer/Tools/VideoViewer/Linux/: VideoViewer.cpp
VideoRenderer/Tools/VideoViewer/macOS/: VideoViewer.mm
VideoRenderer/Tools/VideoWallpaper/: CMakeLists.txt
VideoRenderer/Tools/VideoWallpaper/Linux/: ControlChannel.cpp  ControlChannel.h  VideoWallpaper.cpp
VideoRenderer/Tools/VideoWallpaper/macOS/: ControlChannel.m  VideoWallpaper.mm
VideoRenderer/scripts/: build.sh
WebRenderer/Sources/WebRenderer/: WebRendererEngine.h  WebRendererEngine.mm
WebRenderer/Tools/WebWallpaper/: WebWallpaper.mm
