if(APPLE)
    add_executable(VideoViewer macOS/VideoViewer.mm)
    target_link_libraries(VideoViewer PRIVATE VideoRendererEngine ${VR_FRAMEWORKS})
    target_compile_features(VideoViewer PRIVATE cxx_std_20)
    set_target_properties(VideoViewer PROPERTIES
        OBJCXX_STANDARD 20
        OBJCXX_STANDARD_REQUIRED ON)
    target_compile_options(VideoViewer PRIVATE -Wno-deprecated-declarations)
elseif(UNIX AND NOT APPLE)
    add_executable(VideoViewer Linux/VideoViewer.cpp)
    target_link_libraries(VideoViewer PRIVATE VideoRendererEngine)
    target_compile_features(VideoViewer PRIVATE cxx_std_20)
else()
    message(FATAL_ERROR "VideoViewer has no platform backend for this system")
endif()
